Add basic html description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>HTML & CSS</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/simple.css">
@@ -47,9 +47,15 @@
 					<div class="fragment fade-up">Easy way to describe how <mark>text</mark> should be displayed</div>
 				</section>
 				<section>
+					<h2>Tags</h2>
+					<h4>create HTML elements</h4>
+					<div>Declared with open and closing tags like so: <mark>&lt;element&gt;</mark>content<mark>&lt;/element&gt;</mark></div>
+					<div class="fragment fade-up">Or occassionally with a self-closing tag: <mark>&lt;element&gt;</mark></div>
+				</section>
+				<section>
 					<table>
 						<thead>
-							<th>Code</th>
+							<th>HTML</th>
 							<th>Output</th>
 						</thead>
 						<tbody>
@@ -91,6 +97,39 @@
 							</tr>
 						</tbody>
 					</table>
+				</section>
+				<section>
+					<h3>Many elements make a person</h3>
+					<ol style="list-style: none;">
+					<li>
+						head <span class="fragment fade-left">: <mark>describes</mark></span>
+					</li>
+					<li>
+						body <span class="fragment fade-left">: <mark>content</mark></span>
+					</li>
+					</ol>
+				</section>
+				<section>
+					<h3>Many elements make a <s>person</s> webpage</h3>
+					<div>
+					<pre><code data-trim>
+						&lt;!DOCTYPE html&gt;
+						&lt;html&gt;
+						  &lt;head&gt;
+						    <title>Your Awesome Webpage</title>
+						  &lt;/head&gt;
+						  &lt;body&gt;
+						    <h1>Hello!</h1>
+						  &lt;/body&gt;
+						&lt;/html&gt;
+					</code></pre>
+					</div>
+				</section>
+				<section>
+					<h3>Hands on</h3>
+					<a href="https://thimble.mozilla.org/en-US/projects/new">
+						https://thimble.mozilla.org/projects/new
+					</a>
 				</section>
 			</div>
 		</div>
