Complete html section

--- a/index.html
+++ b/index.html
@@ -42,9 +42,14 @@
 					</ul>
 				</section>
 				<section>
-					<h2>HTML</h2>
-					<h3><b>H</b>yper<b>T</b>ext <b>M</b>arkup <b>L</b>anguage</h3>
-					<div class="fragment fade-up">Easy way to describe how <mark>text</mark> should be displayed</div>
+					<h3>
+						<b>H</b>yper
+						<b>T</b>ext
+						<b>M</b>arkup
+						<b>L</b>anguage
+					</h3>
+					<div class="fragment fade-up">Easy way to describe how
+						<mark>text</mark> should be displayed</div>
 				</section>
 				<section>
 					<h2>Tags</h2>
@@ -130,6 +135,161 @@
 					<a href="https://thimble.mozilla.org/en-US/projects/new">
 						https://thimble.mozilla.org/projects/new
 					</a>
+				</section>
+				<section>
+					<table>
+						<thead>
+							<th>HTML</th>
+							<th>Output</th>
+						</thead>
+						<tbody>
+							<tr>
+								<td><pre style="width: auto;"><code data-trim class="html">
+								<div>content division</div>
+								</code></pre></td>
+								<td><div>content division</div></td>
+							</tr>
+							<tr>
+								<td><pre style="width: auto;"><code data-trim>
+								<p>paragraph</p>
+								</code></pre></td>
+								<td><p>paragraph</p></td>
+							</tr>
+							<tr>
+								<td><pre style="width: auto;"><code data-trim>
+								<!--I am not shown-->
+								</code></pre></td>
+								<td><!--I am not shown--></td>
+							</tr>
+						</tbody>
+					</table>
+				</section>
+				<section>
+					<table>
+						<thead>
+							<th>HTML</th>
+							<th>Output</th>
+						</thead>
+						<tbody>
+							<tr>
+								<td style="vertical-align: top;"><pre style="width: auto; white-space: pre-wrap;"><code data-trim class="html">
+								<img alt="erondu's collection" src="https://source.unsplash.com/user/erondu/160x90">
+								</code></pre></td>
+								<td><img src="https://source.unsplash.com/user/erondu/160x90">
+								</a></td>
+							</tr>
+							<tr>
+								<td style="vertical-align: top;"><pre style="width: auto;"><code data-trim class="html">
+								Photos by
+								<a href="https://unsplash.com/@erondu">erondu</a>
+								on
+								<a href="https://unsplash.com/">Unsplash</a>
+								</code></pre></td>
+								<td>Photos by
+								<a href="https://unsplash.com/@erondu">erondu</a>
+								on
+								<a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+								</a></td>
+							</tr>
+						</tbody>
+					</table>
+				</section>
+				<section>
+					<table>
+						<thead>
+							<th>HTML</th>
+							<th>Output</th>
+						</thead>
+						<tbody>
+							<tr>
+								<td style="vertical-align: top;"><pre style="width: auto;"><code data-trim>
+								<ul>
+								  <li>Item 1</li>
+								  <li>Item 2</li>
+								  <li>Item 3</li>
+								</ul>
+								</code></pre></td>
+								<td><ul>
+								  <li>Item 1</li>
+								  <li>Item 2</li>
+								  <li>Item 3</li>
+								</ul></td>
+							</tr>
+							<tr>
+								<td style="vertical-align: top;"><pre style="width: auto;"><code data-trim>
+								<ol>
+								  <li>Item 1</li>
+								  <li>Item 2</li>
+								  <li>Item 3</li>
+								</ol>
+								</code></pre></td>
+								<td><ol>
+								  <li>Item 1</li>
+								  <li>Item 2</li>
+								  <li>Item 3</li>
+								</ol></td>
+							</tr>
+						</tbody>
+					</table>
+				</section>
+				<section>
+					<table>
+						<thead>
+							<th>HTML</th>
+							<th>Output</th>
+						</thead>
+						<tbody>
+							<tr>
+								<td style="vertical-align: top;" ><pre style="width: auto;"><code data-trim>
+								<table>
+								<thead>
+								  <tr>
+								  <th>Header content 1</th>
+								  <th>Header content 2</th>
+								  </tr>
+								</thead>
+								<tbody>
+								  <tr>
+								  <td>Body content 1</td>
+								  <td>Body content 2</td>
+								  </tr>
+								</tbody>
+								<tfoot>
+								  <tr>
+								  <td>Footer content 1</td>
+								  <td>Footer content 2</td>
+								  </tr>
+								</tfoot>
+								</table>
+								</code></pre></td>
+								<td><table style="font-size: 1.5rem;">
+								<thead>
+								  <tr>
+								  <th>Header content 1</th>
+								  <th>Header content 2</th>
+								  </tr>
+								</thead>
+								<tbody>
+								  <tr>
+								  <td>Body content 1</td>
+								  <td>Body content 2</td>
+								  </tr>
+								</tbody>
+								<tfoot>
+									<tr>
+									<td>Footer content 1</td>
+									<td>Footer content 2</td>
+									</tr>
+								</tfoot>
+								</table></td>
+							</tr>
+						</tbody>
+					</table>
+				</section>
+				<section>
+					<h3>And many more!</h3>
+					<div>Such as video, article, button, form...</div>
+					<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">MDN Resource</a>
 				</section>
 			</div>
 		</div>
