Add bonus trick section

--- a/index.html
+++ b/index.html
@@ -534,6 +534,11 @@
 						</code></pre>
 					</div>
 				</section>
+				<section>
+					<h2>Bonus trick</h2>
+					<div>Right click browser > inspect element</div>
+					<div>backspace/delete to remove html element</div>
+				</section>
 			</div>
 		</div>
 
