--- a/index.html
+++ b/index.html
@@ -539,6 +539,10 @@
 					<div>Right click browser > inspect element</div>
 					<div>backspace/delete to remove html element</div>
 				</section>
+				<section>
+					<h2>NUSHackers</h2>
+					<div><a href="https://sdf">Feedback</a></div>
+				</section>
 			</div>
 		</div>
 
