--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div class="slides">
 				<section>
 					<h1>HTML & CSS</h1>
-					<small>https://nushackers.github.io/htmlcss</small>
+					<small>https://nushackers.github.io/html-css</small>
 				</section>
 				<section>
 					<h2>Internet</h2>
