update feeback form link

--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
       <section>
         <h2>NUSHackers</h2>
         <div>
-          <a href="https://sdf">Feedback</a>
+          <a href="https://goo.gl/forms/kmw4JDuwGu1sxDGf1">Feedback</a>
         </div>
       </section>
     </div>
